--- a/毕业总结.md
+++ b/毕业总结.md
@@ -1,12 +1,15 @@
 # 毕业总结
 
-我第一次接触到kubernets是在18年的时候，公司因为业务拆分，需要开发一个api gateway。当时因为我们用的开发语言是python+go，没办法使用成熟的java组件，然后在技术经理的建议下，我们开始调研学习kubernets。
+    我第一次接触到kubernets是在18年的时候，公司因为业务拆分，核心业务拆分为几个微服务，如意急需开发一个api gateway。当时因为我们用的开发语言是python+go，没办法使用成熟的java组件，然后在总监的建议下，我们开始调研和学习kubernets。
 
-刚开始学习kuberntes时感觉很吃力，kubernets的组件有点多，而且我负责的东西又与kubernets结合不是密切，所以我基本都是自学而且学的特别零散。
+    刚开始学习kuberntes时感觉很吃力，因为kubernets的组件有点多，它是集服务注册，服务发现，负载均呈以及自动扩缩容为一体的大而且的架构。再加上我负责的东西又与kubernets结合不是密切，所以我基本都是自学，学的特别零散和浅显。
 
-今年五月份的时候得知极客时间上有一门云原生的课，看看课程介绍之后，我觉的这是我深入学习kubernets的一个契机。在这15周的学习中，我对与kubernets的了解又上了一个层次了，特别是生产环境的使用和kubernets的结构的了解。
-我本人从事devops已经有两年时间了，感觉知识的积累已经有了瓶颈了，看着身边的同事和同学在云原生的领域大展身手，所以还是有点焦虑的。经过这三个月的专业知识学习，从kubernets部署方法，核心组件的原理，生产环境的高可用运维，以及cicd，还有kubernets的监控。课程中间几个模块从service mesh的基础知识，引入istio，再深入讲解istio的运行原理。成体系的学习整个kubernets的知识。
+    今年五月份的时候得知极客时间上有一门云原生的课，看看课程内容介绍之后，我觉的这是我深入学习kubernets的一个契机。在这15周的学习中，我对与kubernets的生态圈了解又上了一个层次了，特别是生产环境应用和kubernets的生态圈的了解。
+    我本人从事devops已经有两年时间了，感觉知识的积累和突破已经有了瓶颈了，看着身边的同事和同学在云原生的领域大展身手，所以还是有点焦虑的。经过这三个多月的专业知识学习，从kubernets部署方法，核心组件的原理，生产环境的高可用运维，以及cicd，还有kubernets的监控。课程中间几个模块从service mesh的基础知识，引入istio，再深入讲解istio的运行原理。成体系的讲解了整个kubernets生态圈的知识。
 
-在之后的工作和学习中，我将深入去学习kubernets的运行原理，并在工作中入验证和使用
+    在之后的工作和学习中，我将更加深入去学习kubernets的相关知识，并且在工作中入验证和使用
 
-感谢老师，感觉极客时间，也感谢奋斗的自己。
+
+问渠哪得清如许，唯有源头活水来。
+
+感谢老师，也感谢奋斗的自己。
