--- a/毕业总结.md
+++ b/毕业总结.md
@@ -7,9 +7,9 @@
     今年五月份的时候得知极客时间上有一门云原生的课，看看课程内容介绍之后，我觉的这是我深入学习kubernets的一个契机。在这15周的学习中，我对与kubernets的生态圈了解又上了一个层次了，特别是生产环境应用和kubernets的生态圈的了解。
     我本人从事devops已经有两年时间了，感觉知识的积累和突破已经有了瓶颈了，看着身边的同事和同学在云原生的领域大展身手，所以还是有点焦虑的。经过这三个多月的专业知识学习，从kubernets部署方法，核心组件的原理，生产环境的高可用运维，以及cicd，还有kubernets的监控。课程中间几个模块从service mesh的基础知识，引入istio，再深入讲解istio的运行原理。成体系的讲解了整个kubernets生态圈的知识。
 
-    在之后的工作和学习中，我将更加深入去学习kubernets的相关知识，并且在工作中入验证和使用
+    在之后的工作和学习中，我将更加深入去学习和使用kubernets的相关知识，并且在工作中入验证和使用
+                                                                               
+                                                                                                                           
+                                                                                                                           问渠哪得清如许，唯有源头活水来。
 
-
-问渠哪得清如许，唯有源头活水来。
-
-感谢老师，也感谢奋斗的自己。
+                                                                                                                           感谢老师，也感谢奋斗的自己。
