--- a/毕业总结.md
+++ b/毕业总结.md
@@ -6,7 +6,7 @@
    - 刚开始学习kuberntes时感觉很吃力，因为kubernets的组件有点多，它是集服务注册，服务发现，负载均呈以及自动扩缩容为一体的大而且的架构。再加上我负责的东西又与kubernets结合不是密切，所以我基本都是自学，学的特别零散和浅显。
 
    - 今年五月份的时候得知极客时间上有一门云原生的课，看看课程内容介绍之后，我觉的这是我深入学习kubernets的一个契机。在这15周的学习中，我对与kubernets的生态圈了解又上了一个层次了，特别是生产环境应用和kubernets的生态圈的了解。
-   我本人从事devops已经有两年时间了，感觉知识的积累和突破已经有了瓶颈了，看着身边的同事和同学在云原生的领域大展身手，所以还是有点焦虑的。经过这三个多月的专业知识学习，从kubernets部署方法，核心组件的原理，生产环境的高可用运维，以及cicd，还有kubernets的监控。课程中间几个模块从service mesh的基础知识，引入istio，再深入讲解istio的运行原理。成体系的讲解了整个kubernets生态圈的知识。
+   我本人从事devops已经有两年时间了，感觉知识的积累和突破已经慢慢有了瓶颈了，看着身边的同事和同学在云原生的领域有所收获，所以还是有点着急的。经过这三个多月的专业知识学习，从kubernets部署方法，核心组件的原理，生产环境的高可用运维，以及CICD，还有kubernets的监控和日志都有课更加深入理解。课程中间几个模块从service mesh的基础知识，引入istio，再深入讲解istio的运行原理，我了解基于七层的可视化的流量治理。这个三个月时间每天下班回来抓紧时间看孟老师的课，周末的时候自己先跟着文档和ppt走读一边，尝试着动手去实现相关架构，在跟领教老师直播过一遍，深入的学习习了kubernnets生态圈的工具。但是有些知识点感觉还是有些陌生和吃力，特别是后面服务网格相关的课程和安全相关的东西。只能以后再去多跟着视频看几遍，动手做几遍，多看看一些优秀的文章和帖子，以加深理解，它山之玉，可以攻石。
 
    - 在之后的工作和学习中，我将更加深入去学习和使用kubernets的相关知识，并且在工作中入验证和使用                                                                         
                                                                                                                            
