--- a/毕业总结.md
+++ b/毕业总结.md
@@ -10,6 +10,6 @@
 
   - 在之后的工作和学习中，我将更加深入去学习和使用kubernets的相关知识，并且在工作中入验证和使用。                                                                       
                                                                                                                            
-  - 问渠哪得清如许，唯有源头活水来。
+  - 问渠哪得清如许，唯有源头活水来！
 
   - 感谢老师，也感谢奋斗的自己。
