--- a/毕业总结.md
+++ b/毕业总结.md
@@ -1,7 +1,7 @@
 # 毕业总结
 
 
-   - 我第一次接触到kubernets是在18年的时候，公司因为业务拆分，核心业务拆分为几个微服务，如意急需开发一个api gateway。当时因为我们用的开发语言是python+go，没办法使用成熟的java组件，然后在总监的建议下，我们开始调研和学习kubernets。
+   - 我第一次接触到kubernets是在18年的时候，公司因为业务拆分，核心业务拆分为几个微服务，急需开发一个api gateway。当时因为我们用的开发语言是python+go，没办法使用成熟的java组件，然后在总监的建议下，我们开始调研和学习kubernets。
    
    - 刚开始学习kuberntes时感觉很吃力，因为kubernets的组件有点多，它是集服务注册，服务发现，负载均呈以及自动扩缩容为一体的大而且的架构。再加上我负责的东西又与kubernets结合不是密切，所以我基本都是自学，学的特别零散和浅显。
 
